# learnbestia

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
backend/: .env.example  .pre-commit-config.yaml  README.md  build.sh  dockerfile  manage.py  pyproject.toml
backend/account/: exceptions.py  permissions.py  service.py  urls.py  views.py
backend/account/serializers/: course.py  sales.py
backend/authentication/: exceptions.py  service.py  urls.py  views.py
backend/authentication/providers/: ethereum.py  github.py  google.py  polkadot.py
backend/authentication/serializers/: __init__.py  login.py  password.py  register.py  user.py
backend/contracts/: data.json
backend/core/: blockchain.py  exceptions.py  middlewares.py  payment.py  routing.py  service.py  urls.py  utils.py  views.py
backend/core/consumers/: course.py  service.py
backend/core/models/: __init__.py  base.py  course.py  notification.py  sales.py  user.py
backend/core/serializers/: course.py  notification.py  sales.py  user.py
backend/instructor/: permissions.py  urls.py  views.py
backend/instructor/serializers/: instructor.py
backend/instructor/services/: dashboard.py  wallet.py
backend/learnbestia/: asgi.py  settings.py  urls.py  wsgi.py
contract/: brownie-config.yaml  requirements.txt
contract/contracts/: Certificate.sol  Learnbestia.sol  Payment.sol
contract/scripts/: deploy.py  helpers.py
frontend/: dockerfile  package-lock.json  package.json
