[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "learnbestia.settings"
pythonpath = ["src", "tests"]
python_files = [
    "test_*.py",
    "*_test.py",
    "testing/python/*.py"
]
norecursedirs = [
    "scripts",
    "node_modules",
    "py-requirements",
    "webpack",
    ".*",
    "{args}"
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "env",
]

line-length = 79
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "E4", "E7", "E9", "F", "I001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.poetry]
name = "learnbestia"
version = "0.1.0"
description = "API for learning platform"
authors = ["jaykayudo"]
readme = "README.md"
package-mode = false